[나현주] 각 권한별 상단 nav바 수정 회원가입 폼 수정(memberOnline insert 안됨)

--- a/lms/src/main/resources/templates/LE/Join.html
+++ b/lms/src/main/resources/templates/LE/Join.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<head th:replace="fragments/config :: configFragment"></head>
 <meta charset="UTF-8">
-<title>회원등록</title>
+<title>회원가입</title>
 <style>
-	div {
-		table-align: center;
-		}
 </style>
-<script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script><!-- daum post api -->
+<script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script>
     function sample6_execDaumPostcode() {
         new daum.Postcode({
@@ -58,74 +55,59 @@
         }).open();
     }
 </script>
-</head>
-<body>
-<form action="/memberInsert" method="post">
-	<table>
-		<tr>
-			<td>
-				아이디
-			</td>
-			<td>
-				<input type="text" name="memberOnlineId" value="id014">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				비밀번호
-			</td>
-			<td>
-				<input type="password" name="memberOnlinePw" value="1234">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				이름
-			</td>
-			<td>
-				<input type="text" name="memberName" value="이누구">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				주민번호
-			</td>
-			<td>
-				<input type="text" name="memberRegistrationNumberFront" size="6"> - <input type="password" name="memberRegistrationNumberBack" value="1001000" size="7">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				전화번호
-			</td>
-			<td>
-				<pre><input type="tel" name="memberPhoneNumber" value="010-1234-1234" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" required>	(010-0000-0000)</pre>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				주소
-			</td>
-			<td>
+<div class="row">
+    <div class="col-sm-2">
+    </div>
+    <div class="col-sm-8">
+	<header th:replace="fragments/header :: headerFragment"></header>
+	
+	<div layout:fragment="content">
+	<form action="/memberInsert" method="post">
+		<fieldset>
+    		<legend>회원가입</legend>
+    		<div class="col-sm-4">
+				<label for="InputId">아이디</label>
+				<input type="text" class="form-control" id="memberOnlineId" name="memberOnlineId" aria-describedby="" placeholder="ID" value="id014">
+      			<small class="form-text text-muted">영문/숫자 아이디 중복검사 확인 필수</small>
+			</div>
+			<div class="col-sm-4">
+				<label for="InputPw">비밀번호</label>
+				<input type="password" class="form-control" id="memberOnlinePw" name="memberOnlinePw" aria-describedby="" placeholder="PASSWORD" value="1234">
+      			<small class="form-text text-muted">영문/숫자 조합으로 8-16자 </small>
+			</div>
+			<div class="col-sm-4">
+				<label for="InputName">이름</label>
+				<input type="text" class="form-control" id="memberName" name="memberName" aria-describedby="" placeholder="NAME" value="이누구">
+			</div>
+			<div class="col-sm-4">
+				<label for="InputRegistrationNumber">주민번호</label>
+				<div class="row">
+					<div class="col-sm-6">
+					<input type="text" class="form-control" id="memberRegistrationNumberFront" name="memberRegistrationNumberFront" aria-describedby="" placeholder="RegistrationNumberFront" value="1001000" size="4"> 
+					</div>
+					<div class="col-sm-6">
+					<input type="password" class="form-control" id="memberRegistrationNumberBack" name="memberRegistrationNumberBack" aria-describedby="" placeholder="RegistrationNumberBack" value="1001000" size="5">
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<label for="InputPhone">전화번호</label>
+				<input type="text" name="memberPhoneNumber" value="010-1234-1234" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}" required>
+				<small class="form-text text-muted">ex) 010-0000-0000 </small>
+			</div>
+			<div class="col-sm-4">
+				<label for="InputAddress">주소</label>
 				<input type="text" readonly="readonly" maxlength="14" id="memberPostcode" name="memberPostcode" size="4">
-				<input type="button" onclick="sample6_execDaumPostcode()" value="우편번호찾기"><br>
+				<input type="button" class="btn btn-outline-info" onclick="sample6_execDaumPostcode()" value="우편번호찾기"><br>
 				<input id="memberAddress" name="memberAddress" class="inputTypeText" placeholder="도로명주소" readonly="readonly" value="" type="text" size="30"/><br>
 				<input id="memberAddressDesc" name="memberAddressDesc" class="inputTypeText" value="2층 한국스마트정보교육원" placeholder="상세주소" type="text"/>
 				<input type="text" id="sample6_extraAddress" size="7" placeholder="참고항목">
-			</td>
-		</tr>
-		<tr>
-			<td>
+			</div>
 				<!-- 회원등급 -->
 				<input type="hidden" name="memberRank" value="수강생">
-			</td>
-		</tr>
-		<tr>
-			<td>
-				교육원
-			</td>
-			<td>
-				<select name="institutionCode">
+			<div class="col-sm-4">
+				<label for="InputInstitution">교육원</label>
+				<select class="form-control" name="institutionCode">
 					<option value="">--교육원선택--</option>
 					<option value="I1" name="I1">전주평생교육원</option>
 					<option value="I2" name="I2">서울평생교육원</option>
@@ -134,12 +116,16 @@
 					<option value="I5" name="I5">광주평생교육원</option>
 					<option value="I6" name="I6">구미평생교육원</option>
 				</select>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2"><button type="submit" class="btn btn-primary">회원등록</button> <button type="button" onclick="location.href='javascript:history.back()'">뒤로가기</button></td>
-		</tr>
-	</table>
+			</div>
+			<p style="height: 10px"></p>
+			<button type="submit" class="btn btn-primary">회원등록</button> <button type="button" class="btn btn-primary" onclick="location.href='javascript:history.back()'">뒤로가기</button>
+		</fieldset>
 </form>
-</body>
+	</div>
+	<p style="height: 200px"></p>
+	<footer th:replace="fragments/footer :: footerFragment"></footer>
+	</div>
+	<div class="col-sm-2">
+    </div>
+</div>
 </html>
