--- a/lms/src/main/resources/templates/fragments/footer.html
+++ b/lms/src/main/resources/templates/fragments/footer.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <meta charset="utf-8">
 <footer th:fragment="footerFragment">
+	        <p style="height: 25px"></p>
 	<nav class="navbar navbar-expand-sm bg-light navbar-light">
 	    <div class="container-fluid">
-	        <p></p>
 	        <ul class="nav navbar-nav navbar-right">
 	            <li class="nav-item">
 	                github 주소 : 
