--- a/lms/src/main/resources/templates/layout/associationLayout.html
+++ b/lms/src/main/resources/templates/layout/associationLayout.html
@@ -9,7 +9,7 @@
     <div class="col-sm-9">
 	
 	<div layout:fragment="content"></div>
-	
+		<header th:replace="fragments/associationTop :: topFragment"></header>
 	<footer th:replace="fragments/footer :: footerFragment"></footer>
 	</div>
 	<div class="col-sm-1">
