--- a/lms/src/main/resources/templates/layout/institutionLayout.html
+++ b/lms/src/main/resources/templates/layout/institutionLayout.html
@@ -7,7 +7,7 @@
         <header th:replace="fragments/institutionSider :: siderFragment"></header>
     </div>
     <div class="col-sm-8">
-	
+		<header th:replace="fragments/institutionTop :: topFragment"></header>
 	<div layout:fragment="content"></div>
 	
 	<footer th:replace="fragments/footer :: footerFragment"></footer>
