--- a/lms/src/main/resources/templates/layout/teacherLayout.html
+++ b/lms/src/main/resources/templates/layout/teacherLayout.html
@@ -7,7 +7,7 @@
     	<header th:replace="fragments/teacherSider :: siderFragment"></header>
     </div>
     <div class="col-sm-8">
-
+		<header th:replace="fragments/teacherTop :: topFragment"></header>
 		<div layout:fragment="content"></div>
 	
 	<footer th:replace="fragments/footer :: footerFragment"></footer>
