--- a/lms/src/main/resources/templates/association/infoAnnualFee/addInfoAnnualFee.html
+++ b/lms/src/main/resources/templates/association/infoAnnualFee/addInfoAnnualFee.html
@@ -9,26 +9,64 @@
 
 <!-- html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+<script>
+	$(document).ready(function() {
+		//유효성 검사을 위한 변수 선언
+		let infoAnnualFeePriceCheck = true;
+		let infoAnnualFeeDescriptionCheck = true;
+		
+		//infoAnnualFeePrice 입력 유효성 검사
+ 		$('#infoAnnualFeePrice').blur(function() {
+			if($('#infoAnnualFeePrice').val() == "") {
+				console.log('infoAnnualFeePrice 공백입력')
+				infoAnnualFeePriceCheck = true;
+			} else {
+                console.log('infoAnnualFeePrice 유효성 검사 완료')
+				infoAnnualFeePriceCheck = false;
+			}
+			
+ 		});
+		
+ 		//infoAnnualFeeDescription 입력 유효성 검사
+ 		$('#infoAnnualFeeDescription').blur(function() {
+			if($('#infoAnnualFeeDescription').val() == "") {
+				console.log('infoAnnualFeeDescription 공백입력')
+				infoAnnualFeeDescriptionCheck = true;
+			} else {
+                console.log('infoAnnualFeeDescription 유효성 검사 완료')
+				infoAnnualFeeDescriptionCheck = false;
+			}
+ 		});
+ 		
+ 		//btnAdd 클릭 이벤트 처리
+		$('#btnAdd').on('click',function() {
+			if(infoAnnualFeePriceCheck) {
+				$('h4').addClass('red');
+				$('h4').text('연회비 금액이 공백 상테입니다.');
+			} else if(infoAnnualFeeDescriptionCheck) {
+				$('h4').addClass('red');
+				$('h4').text('연회비 상세내용이 공백 상테입니다.');
+			} else {
+				$('#addInfoAnnualFee').submit()
+			}
+		});
+	});
+</script>
 </th:block>
 
 <div layout:fragment="content">
-	<h3>연회비 리스트</h3>
-	<a type="button" href="/LEIndex?institutionCode=I1" class="btn btn-primary">연회비 개요 추가</a>
-	<table class="table">
-		<thead>
-			<tr>
-				<th>연회비 상세내용</th>
-				<th>연회비</th>			
-				<th>개정일</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="list:${infoAnnualFeelist}">
-				<td th:text="${list.infoAnnualFeeDescription}"></td>
-				<td th:text="${list.infoAnnualFeePrice}"></td>
-				<td th:text="${list.infoAnnualFeeEstablishmentDate}"></td>		
-			</tr>
-		</tbody>
-	</table>
+	<h3>연회비 개요 추가</h3>
+	<form id="addInfoAnnualFee" action="/associationAddInfoAnnualFee" method="post">
+		<div class="form-group">
+			<label>연회비 금액 :</label>
+			<input type="text" class="form-control" id="infoAnnualFeePrice" name="infoAnnualFeePrice">
+		</div>
+		<div class="form-group">
+			<label>연회비 상세내용 :</label>
+			<input type="text" class="form-control" id="infoAnnualFeeDescription" name="infoAnnualFeeDescription">
+		</div>
+		<button type="button" id="btnAdd" class="btn btn-secondary">연회비 개요 추가</button>
+		<h4></h4>
+	</form>
 </div>
 </html>
