[김기남] 자격시험 장소 등록(미완성)

--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -12,8 +12,25 @@
 </th:block>
 
 <div layout:fragment="content">
+	
+	<h3>협회 : 자격시험 장소 관리</h3>
+	<ul>
+		<li><a href="">자격시험 장소 등록</a></li>
+		<li><a href="">자격시험 장소 조회</a></li>
+		<li><a href="">자격시험 장소 수정</a></li>
+		<li><a href="">자격시험 장소 삭제</a></li>
+		
+	</ul>
 
-	<a href="/addinfoQualification">자격증 추가</a>
+	<h3>협회 : 자격증 관리</h3>
+	<ul>
+		<li><a href="/addinfoQualification">자격증 등록</a></li>
+		<li><a href="/infoQualification">자격증 조회</a></li>
+		<li><a href="">자격증 수정</a></li>
+		<li><a href="">자격증 삭제</a></li>
+
+	</ul>
+	
 
 	<h1>협회 : 강의관리</h1>
 	<h3>강의 관리</h3>
