--- a/lms/src/main/resources/templates/association/classroom/searchInstitution.html
+++ b/lms/src/main/resources/templates/association/classroom/searchInstitution.html
@@ -47,7 +47,7 @@ $(document).ready(function(){
             console.log('체크된 교육원 : '+$('#ck').val());
         });
         // 강의실 추가 페이지로 이동
-		location.href="/association/classroom/addClassroom"+$("#institutionCode").val()+$('#institutionName').val();
+		location.href="/association/classroom/addClassroom"+$('#ck').val();
 		console.log("교육원 선택 후 클릭..");
 	});	
 });
