--- a/lms/src/main/resources/templates/fragments/header.html
+++ b/lms/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
 	                <a style="font-size: 14px"  class="nav-link" th:href="@{'/login?institutionCode='+${institutionCode}}">로그인</a>
 	            </li>
 	            <li class="nav-item">
-	                <a style="font-size: 14px"  class="nav-link" href="join">회원가입</a>
+	                <a style="font-size: 14px"  class="nav-link" th:href="@{'/join?institutionCode='+${institutionCode}}">회원가입</a>
 	            </li>
 	        </ul>
 	        <ul th:if="${session.memberName != null}" class="nav navbar-nav navbar-right">
@@ -21,7 +21,7 @@
 	                <a style="font-size: 10px"  class="nav-link" href="/logout">로그아웃</a>
 	            </li>
 	            <li class="nav-item">
-	                <a style="font-size: 10px"  class="nav-link" href="#">내정보</a>
+	                <a style="font-size: 10px"  class="nav-link" th:href="@{'/myInfo?institutionCode='+${institutionCode}}">내정보</a>
 	            </li>
 	        </ul>
 	    </div>
