[한병권] 연회비 환불 시작

--- a/lms/src/main/resources/templates/association/infoAnnualFee/refundAnnualFeeList.html
+++ b/lms/src/main/resources/templates/association/infoAnnualFee/refundAnnualFeeList.html
@@ -12,7 +12,34 @@
 </th:block>
 
 <div layout:fragment="content">
-	<h3>연회비 결제 리스트</h3>
+    <h3>환불 가능한 리스트</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>교육원 이름</th>
+                <th>연회비 결제 금액</th>
+                <th>연회비 결제 일</th>
+                <th>연회비 결제 방법</th>
+                <th>서비스 시작일</th>			
+                <th>서비스 종료일</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="paymentListForRefund:${paymentListForRefund}">
+                <td th:text="${paymentListForRefund.institutionName}"></td>
+                <td th:text="${paymentListForRefund.paymentAnnualFeePrice}"></td>
+                <td th:text="${paymentListForRefund.paymentAnnualFeeDate}"></td>
+                <td th:text="${paymentListForRefund.paymentAnnualFeeMethod}"></td>
+                <td th:text="${paymentListForRefund.paymentAnnualFeeServiceStartDate}"></td>
+                <td th:text="${paymentListForRefund.paymentAnnualFeeServiceEndDate}"></td>
+                <td><a type="button" class="btn btn-secondary" th:href="@{'/getrefundAnnualFeeForm?paymentAnnualFeeCode='+${paymentListForRefund.paymentAnnualFeeCode}}" th:text="환불하기"></a></td>		
+            </tr>
+        </tbody>
+    </table>
+    <br>
+    <br>
+	<h3>연회비 총 결제 리스트</h3>
     <table class="table">
         <thead>
             <tr>
@@ -22,7 +49,6 @@
                 <th>연회비 결제 방법</th>
                 <th>서비스 시작일</th>			
 				<th>서비스 종료일</th>
-				<th></th>
             </tr>
         </thead>
         <tbody>
@@ -33,7 +59,6 @@
                 <td th:text="${paymentList.paymentAnnualFeeMethod}"></td>
                 <td th:text="${paymentList.paymentAnnualFeeServiceStartDate}"></td>
 				<td th:text="${paymentList.paymentAnnualFeeServiceEndDate}"></td>
-				<td><a type="button" class="btn btn-secondary" th:href="@{'/LEIndex?institutionCode='+${institutionCode}}" th:text="환불하기"></a></td>		
 			</tr>
         </tbody>
     </table>
