--- a/lms/src/main/resources/templates/association/classroom/searchInstitution.html
+++ b/lms/src/main/resources/templates/association/classroom/searchInstitution.html
@@ -24,46 +24,42 @@ $(document).ready(function(){
                 $('#institutionList').empty();
 				$('#institutionList').append('<thead>');
 				$('#institutionList').append('<tr>');
-				$('#institutionList').append('<th>check</th>');
 				$('#institutionList').append('<th>교육원명</th>');
 				$('#institutionList').append('<th>교육원위치</th>');
 				$('#institutionList').append('</tr>');
 				$('#institutionList').append('</thead>');
 				$('#institutionList').append('<tbody>');
                 $(result).each(function(i,item){	
-               	   $('#institutionList').append('<tr><td><input id="ck" type="checkbox" class="ck" value="'+item.institutionCode+'"></td><td id="'+item.institutionName+'" value="'+item.institutionName+'">'+item.institutionName+'</td><td id="'+item.institutionLocation+'" value="'+item.institutionLocation+'">'+item.institutionLocation+'</td></tr>');
+               	   $('#institutionList').append('<tr><td id="'+item.institutionCode+'" value="'+item.institutionCode+'"><a href="/association/classroom/addClassroom?instCode='+item.institutionCode+'">'+item.institutionName+'</a></td><td id="'+item.institutionLocation+'" value="'+item.institutionLocation+'">'+item.institutionLocation+'</td></tr>');
                 });
                 $('#institutionList').append('</tbody>');
                 $('#result').attr('hidden',false)
              }
         });
-    });
-	
-	$('#result').click(function(){
-		// 체크된 값을 담을 배열 생성
-		let ck = new Array(); // let ck = [];
-        $('.ck:checked').each(function(i,item){ 
-            ck.push($(item).val());
-            console.log('체크된 교육원 : '+$('#ck').val());
-        });
-        // 강의실 추가 페이지로 이동
-		location.href="/association/classroom/addClassroom"+$('#ck').val();
-		console.log("교육원 선택 후 클릭..");
-	});	
+    });	
+   $("#instName").keydown(function(key) {
+        //키의 코드가 13번일 경우 (13번은 엔터키)
+        if (key.keyCode == 13) {
+        	console.log('엔터키 입력..');
+            //검색버튼을 클릭한다한다.
+            $("#search").click();
+        }
+    });	
 });
 </script>
 </th:block>
 
 <div layout:fragment="content">
 	<h2>교육원 찾기</h2>
-	<h5>강의실 등록을 위한 교육원을 선택하여 주십시오</h5>
-	<h5>위치로 검색하실 수 있습니다</h5>
+	<h4>강의실 등록을 위한 교육원을 선택하여 주십시오</h4>
+	<h4>도시명으로 검색하실 수 있습니다  </h4>
+	<br>
+	<h6> ex) 서울, 전주....</h6>
 	<input id="instName" name="instName" type="text">
 	<button id="search" type="button">search</button>	
 	
 	<!-- 교육원리스트 출력을 위한 table 태그 -->
 	<table id="institutionList" class="table table-striped">
 	</table>
-	<button id="result" type="button" hidden="true">해당 교육원 선택</button>
 </div>
 </html>
