[유하람] addClassroom.html 수정하기
- searchInstitution에서 받은 institutionCode로
classroomController-addClassroom 메서드 실행 안됨.
- 수정할것

--- a/lms/src/main/resources/templates/association/classroom/addClassroom.html
+++ b/lms/src/main/resources/templates/association/classroom/addClassroom.html
@@ -37,7 +37,7 @@ $(document).ready(function(){
 			<tr>
 				<th>교육원명 :</th>
 			    <td th:text="${instName}" th:value="${instName}" id="institutionName" name="institutionName">
-			    <input type="hidden" th:value="${instCode}" name="institutionCode"></td>
+			    <input type="hidden" value="${instCode}" name="institutionCode"></td>
 			</tr>
 			<tr>
 			    <th>지역 : </th>
