[나현주] 협회홈페이지 추가작업 진행중

--- a/lms/src/main/resources/templates/institution/institutionIndex.html
+++ b/lms/src/main/resources/templates/institution/institutionIndex.html
@@ -15,5 +15,7 @@
 	<h1>교육원 : 강의관리</h1>
 	<a href="/institution/Lecture/subjectList">과목 조회</a>
 	<a href="/institution/#">강의 조회</a>
+	<h1>교육원 : 회원관리</h1>
+	<a href="/institution/memberList">회원 조회</a>
 </div>
 </html>
