--- a/lms/src/main/resources/templates/PI/joinSuccess.html
+++ b/lms/src/main/resources/templates/PI/joinSuccess.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/LELayout">
+      layout:decorator="layout/PILayout">
 <meta charset="utf-8">
 <title>회원가입 성공</title>
 <!-- index.html 고유 CSS 추가 -->
