[이순곤]협회페이지 완성

--- a/lms/src/main/resources/templates/fragments/associationheader.html
+++ b/lms/src/main/resources/templates/fragments/associationheader.html
@@ -36,11 +36,14 @@
 	        <ul class="nav navbar-nav navbar-center">
 	            <li class="nav-item">
 	                <div class="dropdownatuo">
-	                    <button class="dropbtn">자격증신청 
+	                    <button class="dropbtn">원서접수 
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="#">자격증신청하기</a>
+	                        <a href="#">원서접수안내</a>
+	                   		<a href="#">원서접수신청</a>
+	                   		<a href="#">원서접수현황</a>
+	                   		<a href="#">장애유형별 편의 제공 안내</a>
 	                    </div>
 	                </div>
 	            </li>
