--- a/lms/src/main/resources/templates/layout/PALayout.html
+++ b/lms/src/main/resources/templates/layout/PALayout.html
@@ -6,7 +6,7 @@
     <div class="col-sm-2">
     </div>
     <div class="col-sm-8">
-	<header th:replace="fragments/associationheader :: associationheader"></header>
+	<header th:replace="fragments/associationheader :: headerFragment"></header>
 	
 	<div layout:fragment="content"></div>
 	
