[한병권] 연회비 환불 완료

--- a/lms/src/main/resources/templates/association/refundPolicy/addRefundPolicyLectureList.html
+++ b/lms/src/main/resources/templates/association/refundPolicy/addRefundPolicyLectureList.html
@@ -111,7 +111,8 @@
 				<option value="강의환불 1개월 초과 교습후">강의환불 1개월 초과 교습후</option>
 			</select>
 		</div>		
-		<button type="button" id="btnAdd" class="btn btn-primary">연회비 환불정책 추가</button>
+		<button type="button" id="btnAdd" class="btn btn-secondary">연회비 환불정책 추가</button>
+		<br>
 		<h4></h4>
 	</form>
 </div>
