--- a/lms/src/main/resources/templates/association/refundPolicy/addRefundPolicyLicense.html
+++ b/lms/src/main/resources/templates/association/refundPolicy/addRefundPolicyLicense.html
@@ -85,7 +85,8 @@
 			<input type="text" class="form-control" id="refundPolicyPercentage" name="refundPolicyPercentage">
 		</div>
 		<input type="hidden" id="refundPolicyType" name="refundPolicyType" value="자격시험 환불">
-		<button type="button" id="btnAdd" class="btn btn-primary">연회비 환불정책 추가</button>
+		<button type="button" id="btnAdd" class="btn btn-secondary">연회비 환불정책 추가</button>
+		<br>
 		<h4></h4>
 	</form>
 </div>
