--- a/lms/src/main/resources/templates/association/infoAnnualFee/addRefundAnnualFee.html
+++ b/lms/src/main/resources/templates/association/infoAnnualFee/addRefundAnnualFee.html
@@ -12,42 +12,27 @@
 <script>
 	$(document).ready(function() {
 		//유효성 검사을 위한 변수 선언
-		let infoAnnualFeePriceCheck = true;
-		let infoAnnualFeeDescriptionCheck = true;
+		let refundAnnualFeePriceCheck = true;
 		
 		//infoAnnualFeePrice 입력 유효성 검사
- 		$('#infoAnnualFeePrice').blur(function() {
-			if($('#infoAnnualFeePrice').val() == "") {
-				console.log('infoAnnualFeePrice 공백입력')
-				infoAnnualFeePriceCheck = true;
+ 		$('#refundAnnualFeePrice').blur(function() {
+			if($('#refundAnnualFeePrice').val() == "") {
+				console.log('refundAnnualFeePrice 공백입력')
+				refundAnnualFeePriceCheck = true;
 			} else {
-                console.log('infoAnnualFeePrice 유효성 검사 완료')
-				infoAnnualFeePriceCheck = false;
+                console.log('refundAnnualFeePrice 유효성 검사 완료')
+				refundAnnualFeePriceCheck = false;
 			}
 			
- 		});
-		
- 		//infoAnnualFeeDescription 입력 유효성 검사
- 		$('#infoAnnualFeeDescription').blur(function() {
-			if($('#infoAnnualFeeDescription').val() == "") {
-				console.log('infoAnnualFeeDescription 공백입력')
-				infoAnnualFeeDescriptionCheck = true;
-			} else {
-                console.log('infoAnnualFeeDescription 유효성 검사 완료')
-				infoAnnualFeeDescriptionCheck = false;
-			}
  		});
  		
  		//btnAdd 클릭 이벤트 처리
 		$('#btnAdd').on('click',function() {
-			if(infoAnnualFeePriceCheck) {
+			if(refundAnnualFeePriceCheck) {
 				$('h4').addClass('red');
 				$('h4').text('연회비 금액이 공백 상테입니다.');
-			} else if(infoAnnualFeeDescriptionCheck) {
-				$('h4').addClass('red');
-				$('h4').text('연회비 상세내용이 공백 상테입니다.');
 			} else {
-				$('#addInfoAnnualFee').submit()
+				$('#addRefundAnnualFee').submit()
 			}
 		});
 	});
@@ -77,7 +62,7 @@
     <br>
     <br>
     <h4>연회비 환불 폼</h4>
-	<form id="addInfoAnnualFee" action="/associationAddInfoAnnualFee" method="post">
+	<form id="addRefundAnnualFee" action="/addRefundAnnualFee" method="post">
         <input type="hidden" id="paymentAnnualFeeCode" name="paymentAnnualFeeCode" th:value="${payment.paymentAnnualFeeCode}">
         <input type="hidden" id="institutionCode" name="institutionCode" th:value="${payment.institutionCode}">
         <div class="form-group">
@@ -90,13 +75,14 @@
                 <option th:each="annualFee:${refundPolicyAnnualFeeList}" th:text="${annualFee.refundPolicyDescription}" th:value="${annualFee.refundPolicyCode}"></option>
             </select>
         </div>
+        <input type="hidden" id="infoAnnualFeeCode" name="infoAnnualFeeCode" th:value="${payment.infoAnnualFeeCode}">
         <div class="form-group">
 			<label>서비스 남은일 :</label>
 			<input type="text" class="form-control" readonly="readonly" id="infoInstitutionRemainingDate" name="infoInstitutionRemainingDate" th:value="${remainingDate}">
 		</div>
         <div class="form-group">
 			<label>환불 금액 :</label>
-			<input type="text" class="form-control" id="infoAnnualFeePrice" name="infoAnnualFeePrice">
+			<input type="text" class="form-control" id="refundAnnualFeePrice" name="refundAnnualFeePrice">
         </div>
         <div class="form-group">
             <label>서비스 시작일 :</label>
@@ -110,7 +96,7 @@
             <label>서비스 결제일 :</label>
             <input type="text" class="form-control" readonly="readonly" id="paymentAnnualFeeDate" name="paymentAnnualFeeDate" th:value="${payment.paymentAnnualFeeDate}">
         </div>            
-		<button type="button" id="btnAdd" class="btn btn-secondary">연회비 개요 추가</button>
+		<button type="button" id="btnAdd" class="btn btn-secondary">환불 요청</button>
 		<h4></h4>
 	</form>
 </div>
