--- a/lms/src/main/resources/templates/association/infoAnnualFee/infoAnnualFeeList.html
+++ b/lms/src/main/resources/templates/association/infoAnnualFee/infoAnnualFeeList.html
@@ -13,7 +13,7 @@
 
 <div layout:fragment="content">
 	<h3>연회비 리스트</h3>
-	<a type="button" href="/associationAddInfoAnnualFee" class="btn btn-secondary">연회비 개요 추가</a>
+	<a type="button" href="/association/infoAnnualFee/addInfoAnnualFee" class="btn btn-secondary">연회비 개요 추가</a>
 	<table class="table">
 		<thead>
 			<tr>
@@ -33,8 +33,8 @@
 	<br>
 	<br>
 	<h3>교육원 사용여부 확인</h3>
-	<a type="button" href="/associationAvailableInstitutionRefresh" class="btn btn-secondary">사용여부 새로고침</a>
-	<a type="button" href="/associationRefundAnnualFeeList" class="btn btn-secondary">연회비 환불하기</a>
+	<a type="button" href="/availableInstitutionRefresh" class="btn btn-secondary">사용여부 새로고침</a>
+	<a type="button" href="/association/infoAnnualFee/refundAnnualFeeList" class="btn btn-secondary">연회비 환불하기</a>
 	<table class="table">
 		<thead>
 			<tr>
@@ -60,17 +60,15 @@
 		<thead>
 			<tr>
 				<th>교육원 이름</th>
-				<th>사용권 시작일</th>
-				<th>사용권 종료일</th>			
-				<th>남은일</th>
+				<th>환불일</th>
+				<th>환불금액</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr>
-				<td></td>
-				<td></td>
-				<td></td>
-				<td></td>	
+			<tr th:each="refundAnnualList:${refundAnnualList}">
+				<td th:text="${refundAnnualList.institutionName}"></td>
+				<td th:text="${refundAnnualList.refundAnnualFeeDate}"></td>
+				<td th:text="${refundAnnualList.refundAnnualFeePrice}"></td>	
 			</tr>
 		</tbody>
 	</table>
