--- a/lms/src/main/resources/templates/association/refundPolicy/addRefundPolicyAnnualFee.html
+++ b/lms/src/main/resources/templates/association/refundPolicy/addRefundPolicyAnnualFee.html
@@ -67,7 +67,8 @@
 		</div>
 		<input type="hidden" id="refundPolicyPercentage" name="refundPolicyPercentage" value="0">
 		<input type="hidden" id="refundPolicyType" name="refundPolicyType" value="연회비 환불">
-		<button type="button" id="btnAdd" class="btn btn-primary">연회비 환불정책 추가</button>
+		<button type="button" id="btnAdd" class="btn btn-secondary">연회비 환불정책 추가</button>
+		<br>
 		<h4></h4>
 	</form>
 </div>
