--- a/lms/src/main/resources/templates/association/classroom/addClassroom.html
+++ b/lms/src/main/resources/templates/association/classroom/addClassroom.html
@@ -13,17 +13,18 @@
 $(document).ready(function(){
 	$('#insert').click(function(){
 		console.log("강의실등록 버튼 클릭..");
-		// 수용인원 폼 유효성검사	
+		// 빈칸, 수용인원 폼 유효성검사	
 		let numberCheck = /[0-9]/;
-		if(!numberCheck.test($('#classroomMaximumNumber').val())){
-			$('#helper').text('숫자만 입력가능합니다!');
-		}
-		// 빈칸 유효성 검사	
-		else if($('#classroomName').val() ==''){
+		if($('#classroomName').val() ==''){
 			$('#helper').text('강의실명을 지정해주세요!');
 		}else if($('#classroomUse').val() ==''){
 			$('#helper').text('강의용도를 지정해주세요!');
-		}	
+		}else if(!numberCheck.test($('#classroomMaximumNumber').val())){
+			$('#helper').text('숫자만 입력가능합니다!');
+		} else {
+			$('#addClassroom').submit();
+		}
+		
 	});		
 });
 </script>
@@ -33,36 +34,33 @@ $(document).ready(function(){
 <!-- 강의실 추가 폼 -->
 	<h1>강의실 등록하기</h1>	
 	<form id="addClassroom" action="/association/classroom/addClassroom" method="post">
-		<table class="table table-hover">
-			<tr>
-				<th>교육원명 :</th>
-			    <td th:text="${instName}" th:value="${instName}" id="institutionName" name="institutionName">
-			    <input type="hidden" value="${instCode}" name="institutionCode"></td>
-			</tr>
-			<tr>
-			    <th>지역 : </th>
-			    <td th:text="${instLocation}" th:value="${instLocation}" id="institutionLocation" name="classroomLocation"></td>
-			</tr>
-			<tr>
-				<th>강의실명 : </th>
-			    <td><input class="form-control" type="text" placeholder="강의실 명을 입력해주세요" id="classroomName" name="classroomName"></td>
-			</tr>    
-			<tr>
-				<th>강의용도</th>
-				<td>
+			<div class="form-group">
+				<label>교육원명 :</label>
+			    <input type="text" class="form-control" readonly="readonly" th:text="${institutionName}" th:value="${institutionName}" id="institutionName" name="institutionName">
+			   <input type="hidden" th:text="${institutionCode}" th:value="${institutionCode}" id="institutionCode" name="institutionCode">
+			</div>
+			<div class="form-group">
+			    <label>지역 : </label>
+			     <input type="text" class="form-control" th:text="${institutionLocation}" th:value="${institutionLocation}" id="institutionLocation" name="classroomLocation">
+			     <span style="color:red">지역은 수정 가능합니다</span>
+			</div>
+			<div class="form-group">
+				<label>강의실명 : </label>
+			    <input type="text" class="form-control" type="text" placeholder="강의실 명을 입력해주세요" id="classroomName" name="classroomName">
+			</div>    
+			<div class="form-group">
+				<label>강의용도</label>
 				    <select id="classroomUse" class="custom-select">
-				    	<option>--선택--</option>
-				    	<option th:each="list:${useList}" th:text="${list.classroomUse}" th:value="${list.classroomUse}">--선택--</option>
+				    	<option value="">--선택--</option>
+				    	<option th:each="list:${useList}" th:text="${list.classroomUse}" th:value="${list.classroomUse}"></option>
 				    </select>
-			    </td>
-			</tr>
-			<tr>
-			    <th>수용인원 : </th>
-			    <td><input class="form-control" type="text" placeholder="숫자만 입력가능합니다" id="classroomMaximumNumber" name="classroomMaximumNumber"></td>
-			</tr>
-		</table>
+			</div>
+			<div class="form-group">
+			    <label>수용인원 : </label>
+			    <input type="text" class="form-control" placeholder="숫자만 입력가능합니다" id="classroomMaximumNumber" name="classroomMaximumNumber">
+			</div>
 		<span id="helper" style="color:red"></span><br>
-		<button id="insert" type="submit">강의실 등록하기</button>
+		<button id="insert" type="button">강의실 등록하기</button>
 	</form>
 </div>
 </html>
