--- a/lms/src/main/resources/templates/fragments/header.html
+++ b/lms/src/main/resources/templates/fragments/header.html
@@ -28,7 +28,7 @@
 	</nav>
 	<div class="container-fluid container bg-info text-white" style="height: 250px">
 	    <p style="height: 100px"></p>
-	    <p><a style="font-size: 30px" class="text-white" th:href="@{'/LEIndex?institutionCode='+${institutionCode}}" th:text="${institutionName}"></a></p>
+	    <p><a style="font-size: 30px" class="text-white" th:href="@{'/PIIndex?institutionCode='+${institutionCode}}" th:text="${institutionName}"></a></p>
 	</div>
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 	    <div class="container-fluid">
@@ -52,7 +52,7 @@
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                    	<a th:href="@{'/LE/Lecture/subjectList?institutionCode='+${institutionCode}}">강의/과목 조회</a>
+	                    	<a th:href="@{'/PI/Lecture/subjectList?institutionCode='+${institutionCode}}">강의/과목 조회</a>
 	                        <a href="#">강의소개 1</a>
 	                        <a href="#">강의소개 2</a>
 	                        <a href="#">강의소개 3</a>
