--- a/lms/src/main/resources/templates/login.html
+++ b/lms/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/LELayout">
+      layout:decorator="layout/PILayout">
 <meta charset="utf-8">
 <title>로그인</title>
 <!-- index.html 고유 CSS 추가 -->
@@ -20,7 +20,7 @@
 <div layout:fragment="content">
 	<div>
 		<p style="height: 50px"></p>
-		<form action="/LELogin" method="post">
+		<form action="/PILogin" method="post">
 			<fieldset>
 				<div class="form-group">
     				<legend>수강생 로그인</legend>
