--- a/lms/src/main/resources/templates/fragments/associationheader.html
+++ b/lms/src/main/resources/templates/fragments/associationheader.html
@@ -36,14 +36,69 @@
 	        <ul class="nav navbar-nav navbar-center">
 	            <li class="nav-item">
 	                <div class="dropdownatuo">
-	                    <button class="dropbtn">원서접수 
+	                    <button class="dropbtn">협회소개
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="#">원서접수안내</a>
-	                   		<a href="#">원서접수신청</a>
-	                   		<a href="#">원서접수현황</a>
-	                   		<a href="#">장애유형별 편의 제공 안내</a>
+	                        <a href="#">기관소개</a>
+	                        <a href="#">협회장소개</a>
+	                        <a href="#">임원진소개</a>
+	                        <a href="#">조직부서</a>
+	                        <a href="#">교육기관</a>
+	                    </div>
+	                </div>
+	            </li>
+	            <li class="nav-item">
+	                <div class="dropdownatuo">
+	                    <button class="dropbtn">교육원
+	                        <i class="fa fa-caret-down"></i>
+	                    </button>
+	                    <div class="dropdownatuo-content">
+	                        <a href="/PIIndex?institutionCode=I1">전주평생교육원</a>
+	                        <a href="/PIIndex?institutionCode=I2">서울평생교육원</a>
+	                        <a href="/PIIndex?institutionCode=I3">성남평생교육원</a>
+	                    </div>
+	                </div>
+	            </li>
+	            <li class="nav-item">
+	                <div class="dropdownatuo">
+	                    <button class="dropbtn">자격시험정보 
+	                        <i class="fa fa-caret-down"></i>
+	                    </button>
+	                    <div class="dropdownatuo-content">
+	                        <a href="#">원서접수</a>
+	                        <a href="#">힙격자/답안발표</a>
+	                        <a href="#">시험일정</a>
+							<a href="#">필기시험안내</a>
+	                    	<a href="#">실기시험안내</a>
+	                    	<a href="#">자격정보</a>	                    
+	                    </div>
+	                </div>
+	            </li>
+	             <li class="nav-item">
+	                <div class="dropdownatuo">
+	                    <button class="dropbtn">고객지원 
+	                        <i class="fa fa-caret-down"></i>
+	                    </button>
+	                    <div class="dropdownatuo-content">
+	                        <a href="#">공지사항</a>
+	                        <a href="#">이용안내</a>
+	                        <a href="#">환불안내</a>
+	                        <a href="#">시험계획공지</a>
+	                    </div>
+	                </div>
+	            </li>
+	             <li class="nav-item">
+	                <div class="dropdownatuo">
+	                    <button class="dropbtn">마이페이지 
+	                        <i class="fa fa-caret-down"></i>
+	                    </button>
+	                    <div class="dropdownatuo-content">
+	                        <a href="#">원서접수관리</a>
+	                        <a href="#">응시자격</a>
+	                        <a href="#">자격증취득조회</a>
+	                        <a href="#">발급조회현황</a>
+	                        
 	                    </div>
 	                </div>
 	            </li>
