--- a/lms/src/main/resources/templates/fragments/associationHeader.html
+++ b/lms/src/main/resources/templates/fragments/associationHeader.html
@@ -28,7 +28,7 @@
 	</nav>
 	<div class="container-fluid container bg-info text-white" style="height: 250px">
 	    <p style="height: 100px"></p>
-	    <p><a style="font-size: 30px" class="text-white" th:href="@{'/LEIndex?institutionCode='+${institutionCode}}" th:text="${institutionName}"></a></p>
+	    <p><a style="font-size: 30px" class="text-white" href="/PAIndex?institutionCode=I0" text="평생교육지원협회"></a></p>
 	</div>
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 	    <div class="container-fluid">
