[김기남] 네이밍 수정 및 기능별 이동

--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -15,8 +15,8 @@
 	
 	<h3>협회 : 자격시험 장소 관리</h3>
 	<ul>
-		<li><a href="/association/addLicenseTestLocation">자격시험 장소 등록</a></li>
-		<li><a href="/association/LicenseTestLocationList">자격시험 장소 조회</a></li>
+		<li><a href="/association/license/addLicenseTestLocation">자격시험 장소 등록</a></li>
+		<li><a href="/association/license/LicenseTestLocationList">자격시험 장소 조회</a></li>
 		<li><a href="">자격시험 장소 수정</a></li>
 		<li><a href="">자격시험 장소 삭제</a></li>
 		
@@ -24,8 +24,8 @@
 
 	<h3>협회 : 자격증 관리</h3>
 	<ul>
-		<li><a href="/addinfoQualification">자격증 등록</a></li>
-		<li><a href="/infoQualification">자격증 조회</a></li>
+		<li><a href="/association/license/addInfoQualification">자격증 등록</a></li>
+		<li><a href="/PI/infoQualificationList">자격증 조회</a></li>
 		<li><a href="">자격증 수정</a></li>
 		<li><a href="">자격증 삭제</a></li>
 
