--- a/lms/src/main/resources/templates/association/classroom/classroomList.html
+++ b/lms/src/main/resources/templates/association/classroom/classroomList.html
@@ -12,6 +12,26 @@
 </th:block>
 
 <div layout:fragment="content">
-
+	<h1>협회관리 : 강의실 목록</h1>
+	<table id="classroomList" class="table table-striped">
+		<thead>
+			<tr>
+				<th>교육원명</th>
+				<th>강의실위치</th>
+				<th>강의실명</th>
+				<th>용도</th>
+				<th>최대수용인원</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+		</tbody>
+	</table>
 </div>
 </html>
