--- a/lms/src/main/resources/templates/fragments/associationHeader.html
+++ b/lms/src/main/resources/templates/fragments/associationHeader.html
@@ -28,7 +28,7 @@
 	</nav>
 	<div class="container-fluid container bg-info text-white" style="height: 250px">
 	    <p style="height: 100px"></p>
-	    <p><a style="font-size: 30px" class="text-white" href="/PAIndex?institutionCode=I0" text="평생교육지원협회"></a></p>
+	    <p><a style="font-size: 30px" class="text-white" href="/PAIndex?institutionCode=I0">평생교육지원협회</a></p>
 	</div>
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 	    <div class="container-fluid">
@@ -40,11 +40,11 @@
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="#">기관소개</a>
-	                        <a href="#">협회장소개</a>
-	                        <a href="#">임원진소개</a>
-	                        <a href="#">조직부서</a>
-	                        <a href="#">교육기관</a>
+	                        <a href="#">#기관소개</a>
+	                        <a href="#">#협회장소개</a>
+	                        <a href="#">#임원진소개</a>
+	                        <a href="#">#조직부서</a>
+	                        <a href="#">#교육기관</a>
 	                    </div>
 	                </div>
 	            </li>
@@ -66,12 +66,12 @@
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="#">원서접수</a>
-	                        <a href="#">힙격자/답안발표</a>
-	                        <a href="#">시험일정</a>
-							<a href="#">필기시험안내</a>
-	                    	<a href="#">실기시험안내</a>
-	                    	<a href="#">자격정보</a>	                    
+	                        <a href="/PA/lincense/LicenseTestApplication">#원서접수</a>
+	                        <a href="#">#힙격자/답안발표</a>
+	                        <a href="#">#시험일정</a>
+							<a href="#">#필기시험안내</a>
+	                    	<a href="#">#실기시험안내</a>
+	                    	<a href="#">#자격정보</a>	                    
 	                    </div>
 	                </div>
 	            </li>
@@ -81,10 +81,10 @@
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="#">공지사항</a>
-	                        <a href="#">이용안내</a>
-	                        <a href="#">환불안내</a>
-	                        <a href="#">시험계획공지</a>
+	                        <a href="#">#공지사항</a>
+	                        <a href="#">#이용안내</a>
+	                        <a href="#">#환불안내</a>
+	                        <a href="#">#시험계획공지</a>
 	                    </div>
 	                </div>
 	            </li>
@@ -94,10 +94,10 @@
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="#">원서접수관리</a>
-	                        <a href="#">응시자격</a>
-	                        <a href="#">자격증취득조회</a>
-	                        <a href="#">발급조회현황</a>
+	                        <a href="#">#원서접수관리</a>
+	                        <a href="#">#응시자격</a>
+	                        <a href="#">#자격증취득조회</a>
+	                        <a href="#">#발급조회현황</a>
 	                        
 	                    </div>
 	                </div>
