--- a/lms/src/main/resources/templates/PI/myPage/myInfo.html
+++ b/lms/src/main/resources/templates/PI/myPage/myInfo.html
@@ -16,12 +16,13 @@
 	<div class="col-sm-2 list-group"></div>
 	<div class="col-sm-2 list-group">
 		<a th:href="@{'/memberModify?institutionCode='+${institutionCode}}" class="list-group-item list-group-item-action">정보수정</a>
-		<a href="#" class="list-group-item list-group-item-action">수강정보</a>
-		<a href="#" class="list-group-item list-group-item-action">학습자료실</a>
-		<a href="#" class="list-group-item list-group-item-action">학사 종합정보</a>
-		<a href="#" class="list-group-item list-group-item-action">성적관리</a>
-		<a href="#" class="list-group-item list-group-item-action">수료관리</a>
-		<a href="#" class="list-group-item list-group-item-action">1:1 상담게시판</a>
+		<a href="#" class="list-group-item list-group-item-action">#수강정보</a>
+		<a href="#" class="list-group-item list-group-item-action">#학습자료실</a>
+		<a href="#" class="list-group-item list-group-item-action">#학사 종합정보</a>
+		<a href="#" class="list-group-item list-group-item-action">#성적관리</a>
+		<a href="#" class="list-group-item list-group-item-action">#수료관리</a>
+		<a href="#" class="list-group-item list-group-item-action">#1:1 상담게시판</a>
+		<a th:href="@{'/PI/myPage/evaluation?institutionCode='+${institutionCode}}" class="list-group-item list-group-item-action">교육원/강의평가</a>
 	</div>
 	<div class="col-sm-8 list-group"></div>
 </div>
